@@ -5,35 +5,38 @@ import java.util.*;
 
 public class TopologicalSort {
 
-    public static List<Integer> kahn(Map<Integer, List<Integer>> graph, Metrics metrics) {
-        metrics.start();
-
+    public static List<Integer> sort(Map<Integer, List<int[]>> graph, Metrics metrics) {
+        List<Integer> result = new ArrayList<>();
         Map<Integer, Integer> indegree = new HashMap<>();
-        for (int v : graph.keySet()) {
-            indegree.putIfAbsent(v, 0);
-            for (int to : graph.get(v)) {
-                indegree.put(to, indegree.getOrDefault(to, 0) + 1);
+
+        // Подсчёт входящих рёбер
+        for (Integer u : graph.keySet()) {
+            indegree.putIfAbsent(u, 0);
+            for (int[] edge : graph.get(u)) {
+                int v = edge[0];
+                indegree.put(v, indegree.getOrDefault(v, 0) + 1);
             }
         }
 
-        Queue<Integer> queue = new ArrayDeque<>();
-        for (var e : indegree.entrySet())
-            if (e.getValue() == 0)
-                queue.add(e.getKey());
+        Queue<Integer> queue = new LinkedList<>();
+        for (Map.Entry<Integer, Integer> e : indegree.entrySet()) {
+            if (e.getValue() == 0) queue.add(e.getKey());
+        }
 
-        List<Integer> order = new ArrayList<>();
+        metrics.start();
         while (!queue.isEmpty()) {
-            int v = queue.poll();
+            int u = queue.poll();
             metrics.queueOps++;
-            order.add(v);
-            for (int to : graph.getOrDefault(v, List.of())) {
-                indegree.put(to, indegree.get(to) - 1);
-                if (indegree.get(to) == 0)
-                    queue.add(to);
+            result.add(u);
+
+            for (int[] edge : graph.getOrDefault(u, Collections.emptyList())) {
+                int v = edge[0];
+                indegree.put(v, indegree.get(v) - 1);
+                if (indegree.get(v) == 0) queue.add(v);
             }
         }
-
         metrics.stop();
-        return order;
+
+        return result;
     }
 }
